+ Fixed alignment of tile image layer accordion headers. + Fixed visual glitch involving tile image layer visibility button glyph.

--- a/resources/css/timenav.css
+++ b/resources/css/timenav.css
@@ -73,4 +73,5 @@
     line-height: 17px;
     float: left;
     cursor: text;
+    text-align: right;
 }
